--- a/src/index.html
+++ b/src/index.html
@@ -26,14 +26,15 @@
   <body style=" background-color: #f8f8f8">
    
   <app-root>
-
-     <div class="app-loading">
-            <div class="logo"></div>
-            <svg class="spinner" viewBox="25 25 50 50">
-              <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
-            </svg>
-          </div>
+      <style>
+          app-root {
+         
+            text-align: center;
+          }
+        </style>
+       <h1>We Hope You Never need us</h1>>
   </app-root>
+ 
 
 </body>
 </html>
